# caresense

./: .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  SECURITY.md  SETUP_NOTES.md  app.py  classifier.py  docker-compose.yml  ocr_extract.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-fhe.txt  requirements-transformers.txt  requirements.txt  streamlit_upload_ocr.py  train_model.py
caresense/: __init__.py  config.py
caresense/api/: main.py  routes.py
caresense/crypto/: fhe.py  secure_store.py
caresense/explainability/: __init__.py  lime_explainer.py  shap_explainer.py
caresense/middleware/: __init__.py  rate_limit.py  security.py
caresense/models/: predictor.py  transformer_predictor.py
caresense/parsers/: __init__.py  document_parser.py  sanitizer.py
caresense/schemas/: document.py  explain.py  review.py  triage.py
caresense/services/: auth_service.py  review_service.py  triage_service.py
caresense/utils/: logging.py
caresense/workflows/: compliance.py
data/: Symptom2Disease_dataset_train.csv  extracted_symptoms_train.csv  gretalai_dataset_test.csv  gretalai_dataset_train.csv  symptoms.csv  symptoms_from_images.csv
docs/: IMPLEMENTATION_SUMMARY.md  architecture.md  openapi.yaml
frontend/: .env.example  .eslintrc.cjs  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
kaggle/: Symptom2Disease_dataset_test.csv  venetis_dataset_test.csv  venetis_dataset_train.csv
models/: caresense_model.pkl
reports/: model_card.md
scripts/: generate_openapi.py
(+9 files in other folders)
